# buyme_test

./: business_listings_page.py  element_action.py  home_search_bar.py  intro_reg_page.py  pyproject.toml  sender_receiver_info_page.py  test_page_tester.py
allure-report/: index.html
allure-report/export/: influxDbData.txt
alure-reports/: 01846816-af47-4e90-8f05-214c8e3a8a5b-result.json  20993084-ed32-4824-a48e-10e78e8d1f55-result.json  3e7f24c0-aa70-495d-b8d9-0095b3eac0f2-result.json  4a16f048-de0f-4911-b077-f26758114606-result.json  64e37b50-acee-4cec-a51d-e2af88355453-container.json  7e784c20-ab4f-411a-ac5f-163923c9a5dc-container.json  90e5f8a1-50fc-4b11-bed8-14a201f06fc1-result.json  9ce4c440-fa9b-4708-a74e-b20acecb21ad-result.json  aa3ba990-5621-4784-a712-4038b256b4b2-result.json  da457e37-4a9e-4dbb-96bc-b88b41960717-result.json  dda1532e-341d-4f16-afcd-d9643b70df51-result.json  e1dc6a5e-ce67-4c28-a585-768dfb566acd-attachment.txt  f402e7ad-1484-4bdd-bdf4-05bd45912c77-result.json
json_dir/: config.json  receiver_info.json  users_info.json
json_loaders_dir/: load_browser_config.py  load_receiver_info.py  load_users_info.py
