[tool.poetry]
name = "bymesite-test"
version = "0.1.0"
description = ""
authors = ["Gabriel <gabriel-mai@outlook.com>"]
readme = "README.md"
packages = [{include = "bymesite_test"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.11.2"
allure-pytest = "^2.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
